# bevy_space_editor_prototype

./: Cargo.toml
crates/editor_game_plugin/: Cargo.toml
crates/editor_game_plugin/src/: lib.rs
examples/test_game/: Cargo.toml
examples/test_game/src/: lib.rs  main.rs
src/: lib.rs
src/project/: mod.rs
